# water_level

./: .gitignore  CLAUDE.md  Makefile  README.md  app.py  bdd.py  ignore_dates.yaml  requirements.txt  update_missing_day.py
docs/: 01-architecture.md  02-database.md  03-worker-python.md  04-frontend.md  05-infrastructure.md  06-operations.md  07-security.md  08-glossary.md  09-history.md
docs/superpowers/plans/: 2026-05-15-water-level-v2-plan1-worker.md  2026-05-15-water-level-v2-plan2-frontend.md
docs/superpowers/specs/: 2026-05-15-water-level-v2-design.md
infra/: Caddyfile  RUNBOOK.md  bootstrap.sh
infra/systemd/: lac-ai.service  lac-ai.timer  lac-backup.service  lac-backup.timer  lac-scraper.service  lac-scraper.timer  lac-web.service
web/: .env.local.example  package-lock.json  package.json
web/public/: manifest.webmanifest
web/src/app/: _ColoredCurveChart.tsx  _DaysSelectorWithChart.tsx  globals.css  layout.tsx  page.tsx
web/src/components/: AIBanner.tsx  AppShell.tsx  BottomNav.tsx  DaysSelector.tsx  DisplayProvider.tsx  FlowSummary.tsx  KpiGrid.tsx  LevelHero.tsx  WaterChart.tsx  YearSelector.tsx
web/tests/: kpi.test.ts
webapp/: colors.py  data_access.py  forecast.py  kpi.py  llm.py  plotly_chart.py  ui_components.py
worker/: .env.example  Makefile  pyproject.toml
worker/src/lac_worker/: __init__.py  ai.py  api.py  cli.py  config.py  db.py  kpi.py  migrate.py  policy.py  scraper.py
worker/tests/: conftest.py  test_ai.py  test_api.py  test_config.py  test_db.py  test_kpi.py  test_migrate.py  test_policy.py  test_scraper.py
(+33 files in other folders)
