[project]
name = "lac-worker"
version = "0.1.0"
description = "Worker Python pour le monitoring du niveau d'eau du lac des Saints Peyres."
requires-python = ">=3.12"
dependencies = [
    "requests>=2.32",
    "openai>=1.50",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.6",
]

[project.scripts]
lac-scraper = "lac_worker.cli:scraper_main"
lac-ai-refresher = "lac_worker.cli:ai_refresher_main"
lac-migrate = "lac_worker.cli:migrate_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lac_worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "RUF"]
